--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,14 @@
       <div class="grid-content shrink" style="padding: 0;">
         <ul class="primary condense menu-bar">
           <li><a><strong>Foundation for Apps</strong></a></li>
-          <li><a ui-sref="/">Home</a></li>
+          <li><a ui-sref="/home">Home</a></li>
         </ul>
       </div>
       <div class="grid-content">
         <div class="grid-container">
-          <div ng-class="['ui-animation']" ui-view><%= yield %></div>
+          <div ng-class="['ui-animation']" ui-view>
+            <%= yield %>
+          </div>
         </div>
       </div>
     </div>
